@@ -1,5 +1,9 @@
 2006-05-25  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plparse/totem-disc.c: (cd_cache_open_device): remove dead code
+
+2006-05-25  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plparse/totem-disc.c: (cd_cache_free): Disconnect from HAL
 	when we're done with the work
 
